--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -86,7 +86,7 @@ p {
 button {
 white-space: nowrap;
   position: relative;
-  margin-top: 6em;
+  margin-top: 1em;
   font-family: 'Allerta Stencil', sans-serif;
   text-align:center;
   text-shadow:0.5px 1px #494C37;
